# eaf-cognitive-twin

./: Dockerfile  README.md  docker-compose.yml  eaf_simulator.py  pyproject.toml  requirements.txt
.github/workflows/: pr-test.yml
configs/: base_case.json
docs/: architecture.md  assumptions.md  migration.md  roadmap.md  thermal_model_kelvin_note.md
eaf_twin/: cli.py
eaf_twin/config/: defaults.py  loader.py
eaf_twin/domain/: models.py
eaf_twin/estimation/: calibration.py
eaf_twin/models/: base.py  first_principles.py
eaf_twin/reporting/: plots.py
eaf_twin/simulation/: runner.py  schedule.py
eaf_twin/validation/: metrics.py
outputs/: result.html
src/eaf_twin/: cli.py  constants.py  units.py
src/eaf_twin/config/: defaults.py
src/eaf_twin/domain/: models.py
src/eaf_twin/io/: persistence.py
src/eaf_twin/models/: base.py  empirical.py  first_principles.py
src/eaf_twin/reporting/: html.py  plots.py
src/eaf_twin/simulation/: runner.py
src/eaf_twin/validation/: checks.py
tests/: test_eaf_simulator.py  test_eaf_twin.py
